--- a/.github/workflows/venue_data_trigger.yaml
+++ b/.github/workflows/venue_data_trigger.yaml
@@ -31,7 +31,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
-          git commit -m "$COMMIT_MESSAGE" -a
+          git commit -m "$COMMIT_MESSAGE" -a || echo "Nothing to commit — ($CURRENT_DATE)"
 
       - name: push changes
         uses: ad-m/github-push-action@master
